--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "axios": "^1.6.0",
     "element-plus": "^2.4.1",
     "pinia": "^2.1.4",
